gluecodium/src/test/resources/smoke/errors/output/lime/smoke/WithPayload.lime
package smoke
exception WithPayload(Payload)
